--- a/TFODCourse/1. Image Collection.ipynb
+++ b/TFODCourse/1. Image Collection.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,9 +286,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tfod",
+   "display_name": "tf2.5",
    "language": "python",
-   "name": "tfod"
+   "name": "tf2.5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -300,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
