TODO: add tracking

--- a/TFODCourse/1. Image Collection.ipynb
+++ b/TFODCourse/1. Image Collection.ipynb
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['thumbsup', 'thumbsdown', 'thankyou', 'livelong']\n",
+    "labels = ['crossing', 'waiting']\n",
     "number_imgs = 5"
    ]
   },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,17 +107,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"pedestrian.6328fca0-ff8d-11eb-8636-34cff6b8e259.jpg\" is changed to \"pedestrianf3c99415-ffb1-11eb-be8d-34cff6b8e259.jpg\"\n",
+      "\"pedestrian.632923b4-ff8d-11eb-abc6-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9a7a0-ffb1-11eb-92e8-34cff6b8e259.jpg\"\n",
+      "\"pedestrian.63293746-ff8d-11eb-a6e9-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9ceb9-ffb1-11eb-8c5c-34cff6b8e259.jpg\"\n",
+      "\"pedestrian.63294ad5-ff8d-11eb-b01d-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9e243-ffb1-11eb-856a-34cff6b8e259.jpg\"\n",
+      "\"pedestrian.63295e64-ff8d-11eb-a753-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9f5d2-ffb1-11eb-b31d-34cff6b8e259.jpg\"\n"
+     ]
+    }
+   ],
    "source": [
     "#change add uuid to file name\n",
-    "dir = os.path.join(IMAGES_PATH, label)\n",
+    "#dir = os.path.join(IMAGES_PATH, label)\n",
+    "dir = IMAGES_PATH\n",
+    "label = 'pedestrian'\n",
     "\n",
     "#change all file names for training\n",
     "for _, filename in enumerate(os.listdir(dir)):\n",
     "    src = os.path.join(dir, filename)\n",
-    "    newName = label+'.{}.jpg'.format(str(uuid.uuid1()))\n",
+    "    newName = label+'{}.jpg'.format(str(uuid.uuid1()))\n",
     "    dst = os.path.join(dir, newName)\n",
     "    os.rename(src, dst)\n",
     "    print(f'\"{filename}\" is changed to \"{newName}\"')"
@@ -195,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "labelImg.py:965: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "  bar.setValue(bar.value() + bar.singleStep() * units)\n"
+     ]
+    }
+   ],
    "source": [
     "!cd {LABELIMG_PATH} && python labelImg.py"
    ]
