--- a/TFODCourse/1. Image Collection.ipynb
+++ b/TFODCourse/1. Image Collection.ipynb
@@ -16,12 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting opencv-python\n",
-      "  Using cached opencv_python-4.5.3.56-cp39-cp39-win_amd64.whl (34.9 MB)\n",
-      "Collecting numpy>=1.19.3\n",
-      "  Using cached numpy-1.21.1-cp39-cp39-win_amd64.whl (14.0 MB)\n",
-      "Installing collected packages: numpy, opencv-python\n",
-      "Successfully installed numpy-1.21.1 opencv-python-4.5.3.56\n"
+      "Requirement already satisfied: opencv-python in c:\\users\\liyij\\anaconda3\\envs\\tf2.5\\lib\\site-packages (4.5.3.56)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\liyij\\anaconda3\\envs\\tf2.5\\lib\\site-packages (from opencv-python) (1.21.2)\n"
      ]
     }
    ],
@@ -31,9 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12240/987480591.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import opencv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Import uuid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0muuid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "# Import opencv\n",
     "import cv2 \n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,21 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"pedestrian.6328fca0-ff8d-11eb-8636-34cff6b8e259.jpg\" is changed to \"pedestrianf3c99415-ffb1-11eb-be8d-34cff6b8e259.jpg\"\n",
-      "\"pedestrian.632923b4-ff8d-11eb-abc6-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9a7a0-ffb1-11eb-92e8-34cff6b8e259.jpg\"\n",
-      "\"pedestrian.63293746-ff8d-11eb-a6e9-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9ceb9-ffb1-11eb-8c5c-34cff6b8e259.jpg\"\n",
-      "\"pedestrian.63294ad5-ff8d-11eb-b01d-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9e243-ffb1-11eb-856a-34cff6b8e259.jpg\"\n",
-      "\"pedestrian.63295e64-ff8d-11eb-a753-34cff6b8e259.jpg\" is changed to \"pedestrianf3c9f5d2-ffb1-11eb-b31d-34cff6b8e259.jpg\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#change add uuid to file name\n",
     "#dir = os.path.join(IMAGES_PATH, label)\n",
@@ -139,22 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting images for thumbsup\n",
-      "Collecting image 0\n",
-      "Collecting image 1\n",
-      "Collecting image 2\n",
-      "Collecting image 3\n",
-      "Collecting image 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for label in labels:\n",
     "    cap = cv2.VideoCapture(0)\n",
@@ -183,33 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyqt5\n",
-      "  Using cached PyQt5-5.15.4-cp36.cp37.cp38.cp39-none-win_amd64.whl (6.8 MB)\n",
-      "Collecting lxml\n",
-      "  Using cached lxml-4.6.3-cp39-cp39-win_amd64.whl (3.5 MB)\n",
-      "Collecting PyQt5-Qt5>=5.15\n",
-      "  Using cached PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl (50.1 MB)\n",
-      "Collecting PyQt5-sip<13,>=12.8\n",
-      "  Using cached PyQt5_sip-12.9.0-cp39-cp39-win_amd64.whl (63 kB)\n",
-      "Installing collected packages: PyQt5-sip, PyQt5-Qt5, pyqt5, lxml\n",
-      "Successfully installed PyQt5-Qt5-5.15.2 PyQt5-sip-12.9.0 lxml-4.6.3 pyqt5-5.15.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install --upgrade pyqt5 lxml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,17 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'Tensorflow\\labelimg'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists(LABELIMG_PATH):\n",
     "    !mkdir {LABELIMG_PATH}\n",
@@ -237,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,18 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "labelImg.py:965: DeprecationWarning: an integer is required (got type float).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
-      "  bar.setValue(bar.value() + bar.singleStep() * units)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cd {LABELIMG_PATH} && python labelImg.py"
    ]
@@ -281,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
